--- a/geopolitics-react/dataPrep/package.json
+++ b/geopolitics-react/dataPrep/package.json
@@ -9,6 +9,7 @@
     "build:watch": "tsc --watch && vite build --watch",
     "preview": "vite preview",
     "pretty": "prettier --write src && prettier --write out",
+    "pretty:staged": "prettier --write $(git diff --name-only --diff-filter d | grep '\\.ts$' | xargs)",
     "runcli": "ts-node src/main.ts",
     "clean": "rm -rf out/*"
   },
