--- a/geopolitics-react/package.json
+++ b/geopolitics-react/package.json
@@ -35,6 +35,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "react-konva-components": "link:./../../../ReactKonvaComponents/",
+    "type-library": "link:./../../../Coordinates/type-library/",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
