--- a/geopolitics-react/package.json
+++ b/geopolitics-react/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@datorama/akita": "^8.0.1",
@@ -26,16 +28,23 @@
     "xpath-range": "^1.1.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "@babel/preset-typescript": "^7.22.5",
+    "@types/jest": "^29.1.1",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "babel-jest": "^29.6.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "jest": "^29.1.1",
     "react-konva-components": "link:./../../../ReactKonvaComponents/",
+    "ts-jest": "^29.1.1",
     "type-library": "link:./../../../Coordinates/type-library/",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
