--- a/geopolitics-react/package.json
+++ b/geopolitics-react/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.7",
+    "react-konva-components": "link:./../../../ReactKonvaComponents/",
     "react-leaflet": "^4.2.1",
     "react-marker": "^1.0.1",
     "react-resizable-panels": "^0.0.42",
@@ -43,7 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.1.1",
-    "react-konva-components": "link:./../../../ReactKonvaComponents/",
+    "jest-canvas-mock": "^2.5.2",
     "ts-jest": "^29.1.1",
     "type-library": "link:./../../../Coordinates/type-library/",
     "typescript": "^5.0.2",
