--- a/geopolitics-react/dataPrep/package.json
+++ b/geopolitics-react/dataPrep/package.json
@@ -5,6 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "dev": "vite",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "tsc && vite build",
     "build:watch": "tsc --watch && vite build --watch",
     "preview": "vite preview",
@@ -15,6 +17,10 @@
   },
   "devDependencies": {
     "@types/figlet": "^1.5.6",
+    "@types/jest": "^29.1.1",
+    "babel-jest": "^29.6.1",
+    "ts-jest": "^29.1.1",
+    "jest": "^29.1.1",
     "@types/node": "^20.3.1",
     "@types/papaparse": "^5.3.7",
     "commander": "^11.0.0",
