--- a/geopolitics-react/package.json
+++ b/geopolitics-react/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "bench": "ts-node --project tsconfig.json --esm src/data/data.query.unit.bench.ts",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest",
@@ -33,6 +34,7 @@
     "@babel/core": "^7.22.9",
     "@babel/preset-env": "^7.22.9",
     "@babel/preset-typescript": "^7.22.5",
+    "@types/asciichart": "^1.5.6",
     "@types/jest": "^29.1.1",
     "@types/leaflet": "^1.9.3",
     "@types/react": "^18.0.28",
@@ -40,13 +42,19 @@
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "asciichart": "^1.5.25",
     "babel-jest": "^29.6.1",
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jest": "^29.1.1",
     "jest-canvas-mock": "^2.5.2",
+    "ml-regression-polynomial": "^2.2.0",
+    "rollup-plugin-visualizer": "^5.9.2",
+    "simple-statistics": "^7.8.3",
+    "tinybench": "^2.5.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "type-library": "link:./../../../Coordinates/type-library/",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
