--- a/geopolitics-react/package.json
+++ b/geopolitics-react/package.json
@@ -37,6 +37,7 @@
     "@types/asciichart": "^1.5.6",
     "@types/jest": "^29.1.1",
     "@types/leaflet": "^1.9.3",
+    "@types/random-seed": "^0.3.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
